# bitcoin-indexer

./: .env.example  .gitignore  Cargo.toml  README.md  ROADMAP.md
benches/: bitcoincore_rpc.rs
src/: lib.rs  main.rs  opts.rs  tests.rs  util.rs
src/db/: pg.rs
src/db/pg/: init.sql  mode_bulk.sql  mode_normal.sql  wipe.sql
src/node/: fetcher.rs  prefetcher.rs
src/util/: bitcoin.rs  runes.rs  script.rs
