[package]
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
edition = "2018"
name = "bitcoin-indexer"
version = "0.1.0"
description = "Powerful & Versatile Bitcoin Indexer"
keywords = ["bitcoin", "indexer", "database", "cryptocurrency"]
categories = []
license = "MPL-2.0/MIT/Apache-2.0"
documentation = "https://docs.rs/bitcoin-indexer"
homepage = "https://github.com/rust-bitcoin-indexer/bitcoin-indexer"
repository = "https://github.com/rust-bitcoin-indexer/bitcoin-indexer"
readme = "README.md"

[[bench]]
harness = false
name = "bitcoincore_rpc"

[dependencies]
bitcoin = "0.32"
bitcoincore-rpc = "0.19.0"
common_failures = "*"
diesel = { version = "1.4", optional = true }
failure = "*"
hex = "0.4"
secp256k1 = "0.22"
crossbeam-channel = "*"
structopt = "*"
clap = { version = "4", features = ["derive"] }
default = "*"
dotenv = "*"
postgres = "0.19.1"
insideout = "*"
num_cpus = "1"
log = "0.4"
rayon = "1"
env_logger = { version = "*", default-features = false, features = ["termcolor", "atty", "humantime"]}
itertools = "0.8"
url = "2"
fallible-iterator = "0.2"
miniscript = "12"

openssl = "0.10"
postgres-openssl = "0.5"

[features]
pg_tls_openssl = []
default = ["pg_tls_openssl"]

[dev-dependencies]
criterion = "0.2"
quickcheck = "1"
quickcheck_macros = "0.8"
